<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tv_setAgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_setAgent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_setAgent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_setAgent" />

    <TextView
        android:id="@+id/tv_startAgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_startAgent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_startAgent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_startAgent" />

</LinearLayout>